...
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/local_typing_game_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/squared_button"
                            android:backgroundTint="@color/cg_blue"
                            android:elevation="10dp"
...
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:visibility="visible" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/local_lyrics_game_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/squared_button"
                            android:backgroundTint="@color/cg_blue"
                            android:elevation="10dp"
...
                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/local_buzzer_game_button"
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/squared_button"
                            android:backgroundTint="@color/cg_blue"
                            android:elevation="10dp"
...
